[Portal.Theme] Workspace UI fixes on main navigation and background alignment

--- a/portal.theme/trunk/portal/theme/static/css/global-styles.css
+++ b/portal.theme/trunk/portal/theme/static/css/global-styles.css
@@ -75,6 +75,9 @@ blockquote, q {
     clear: both;
     visibility: hidden;
 }
+.clearleft {
+    clear:left;
+}
 
 h3.printHeading,
 .whats_on_print_heading {
