--- a/portal.theme/trunk/portal/theme/static/css/skin.css
+++ b/portal.theme/trunk/portal/theme/static/css/skin.css
@@ -1411,7 +1411,7 @@ span.yui-button.yui-link-button span a {
 }
 .template-workspace #visual-table-wrapper {
     text-align: left;
-    background:url(/static/images/workspace-border-right.png) top right repeat-y;
+    background:url(/static/images/workspace-border-right.png) repeat-y top right;
 }
 .template-workspace span#corner-a,
 .template-workspace span#corner-b {
